<resources>
    <string name="app_name">Find Falcone</string>
    <string name="news">Your Highness, \n \t\t\t\t\tOur Intel brings you the news of possible hideout of our enemy, Al Falcone.\n Our men are waiting for your decision</string>
    <string name="decision">Lets Proceed</string>
    <string name="planetName">Planet Name</string>
    <string name="distance">Distance:</string>
    <string name="temporaryDistance">100 Megadistance</string>
    <string name="planetIntro">\t\t\t\tOur Enemy, Al Falcone, is hiding in one of these planets and considering our resources its best to search in 4 of these planets.\n Choose Wisely</string>
    <string name="planetsSelected">Next</string>
    <string name="vehicleName">Vehicle Name</string>
    <string name="ava_units">Available_Units:</string>
    <string name="units">2</string>
    <string name="max_dist">Max. Distance:</string>
    <string name="speed">2</string>
    <string name="veh_dist">200</string>
    <string name="speedHolder">Max. Speed:</string>
    <string name="veh_speed">2</string>
    <string name="planet_selection">Planet Selection</string>
    <string name="vehicle_selection">Vehicle Selection</string>
    <string name="vehicleIntro">I\'m quite confident that we will hunt down Al Falcone, please select the units to dispatch</string>
    <string name="huntBegin">Let the hunt begin</string>
    <string name="selected_planet">Selected Planet</string>
    <string name="dispatchedUnit">Dispatched Unit</string>
    <string name="planet1">Planet 1</string>
    <string name="planet2">Planet 2</string>
    <string name="planet3">Planet 3</string>
    <string name="planet4">Planet 4</string>
    <string name="spinner_prompt">Select unit to dispatch</string>
    <string name="final_message_pos">Your smartness knew no bounds my king, this crucial hunt is going down in history as the best one ever!! \n Al Falcone\'s excile period starts over again</string>
    <string name="planetFound">Planet Found In</string>
    <string name="timeTaken">Time Taken</string>
    <string name="final_Button">Start Again</string>
    <string name="final_message_neg">Oops, our dispatched units couldn\'t find Al Falcone in those areas</string>
    <string-array name="vehicle">
        <item>Null</item>
        <item>Space pod</item>
        <item>Space rocket</item>
        <item>Space shuttle</item>
        <item>Space ship</item>
    </string-array>
</resources>