<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Planets_Selection">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue700"
        android:elevation="4dp"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/AlertDialog.AppCompat.Light" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-medium"
            />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/findfalcone"
            android:scaleType="centerCrop"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/resource_header"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vehicle_selection"
        android:textColor="@color/blue300"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_below="@id/toolbar"/>

    <TextView
        android:id="@+id/vehicleintro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/resource_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/vehicleIntro" />

    <LinearLayout
        android:id="@+id/dispatchedDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/vehicleintro">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="3dp">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/selected_planet"
                android:textColor="@color/blue300"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dispatchedUnit"
                android:textColor="@color/blue300"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="3dp">
            <TextView
                android:id="@+id/planet1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/planet1"
                android:gravity="center_horizontal"
                android:textSize="20sp"/>

            <Spinner
                android:entries="@array/vehicle"
                android:id="@+id/spinner1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_prompt"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="3dp">
            <TextView
                android:id="@+id/planet2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/planet2"
                android:gravity="center_horizontal"
                android:textSize="20sp"/>

            <Spinner
                android:entries="@array/vehicle"
                android:id="@+id/spinner2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_prompt"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="3dp">
            <TextView
                android:id="@+id/planet3"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/planet3"
                android:gravity="center_horizontal"
                android:textSize="20sp"/>

            <Spinner
                android:entries="@array/vehicle"
                android:id="@+id/spinner3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_prompt"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="3dp">
            <TextView
                android:id="@+id/planet4"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/planet4"
                android:gravity="center_horizontal"
                android:textSize="20sp"/>

            <Spinner
                android:entries="@array/vehicle"
                android:id="@+id/spinner4"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_prompt"/>
        </LinearLayout>

    </LinearLayout>


    <ListView
        android:layout_below="@id/dispatchedDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/huntBegin"
        android:id="@+id/vehicleListView"/>

    <Button
        android:id="@+id/huntBegin"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:padding="5dp"
        android:text="@string/huntBegin"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>