<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Planets_Selection">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue700"
        android:elevation="4dp"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/AlertDialog.AppCompat.Light" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-medium"
            />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/findfalcone"
            android:scaleType="centerCrop"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/resource_header"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/planet_selection"
        android:textColor="@color/blue300"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_below="@id/toolbar"/>

    <TextView
        android:id="@+id/planetintro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_below="@id/resource_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/planetIntro" />

    <ListView
        android:layout_below="@id/planetintro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/Next"
        android:id="@+id/listView"
        android:listSelector="@drawable/view_background">
    </ListView>

    <Button
        android:id="@+id/Next"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:padding="5dp"
        android:text="@string/planetsSelected"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>