<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/vehicleCardView"
        app:cardElevation="60dp"
        app:cardCornerRadius="12dp"
        android:layout_margin="12dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:id="@+id/vehicleHeader"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicleName"
                    android:id="@+id/vehicleName"
                    android:padding="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/unitsHeader"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/vehicleHeader">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ava_units"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/blue300"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/units"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textSize="15sp"
                    android:id="@+id/available_units"
                    android:layout_marginStart="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/distanceHeader"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/unitsHeader">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_dist"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/blue300"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/veh_dist"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textSize="15sp"
                    android:id="@+id/vehicleDistance"
                    android:layout_marginStart="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/speedHeader"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/distanceHeader">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speedHolder"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/blue300"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/veh_speed"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textSize="15sp"
                    android:id="@+id/vehicleSpeed"
                    android:layout_marginStart="10dp" />
            </LinearLayout>

            <ImageView
                android:layout_marginRight="20dp"
                android:id="@+id/vehicleImageHolder"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitCenter"
                android:src="@drawable/space_pod"
                android:layout_below="@id/vehicleHeader"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>