<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/planetCardView"
        app:cardElevation="60dp"
        app:cardCornerRadius="12dp"
        android:layout_margin="12dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:id="@+id/planetHeader"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planetName"
                    android:id="@+id/planetName"
                    android:padding="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/planetHeader">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/blue300"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temporaryDistance"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textSize="15sp"
                    android:id="@+id/planetDistance"
                    android:layout_marginStart="10dp" />

            </LinearLayout>

            <ImageView
                android:layout_marginRight="20dp"
                android:id="@+id/planetImageHolder"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitCenter"
                android:src="@drawable/lerbin"
                android:layout_below="@id/planetHeader"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>